[workspace]
members = [ "engine_common","game", "lobby_common", "lobby_server"]
resolver = "3"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
# opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

[patch.crates-io]
ring = { git = "https://github.com/briansmith/ring" }