[package]
name = "engine_common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
uuid = { version = "1.16", features = ["v4", "serde"] }
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
ron = "0.10.1"
bevy_asset = { version = "0.16", optional = true}
bevy_reflect = { version = "0.16", optional = true}

[features]
bevy = ["dep:bevy_asset", "dep:bevy_reflect"]